[tool.poetry]
name = "digipipe"
version = "0.0.0"
description = "Pipeline for data and energy system in the Digiplan project."
authors = [
  "Jonathan Amme <jonathan.amme@rl-institut.de>",
  "Marie-Claire Gering <marie-claire.gering@rl-institut.de>",
]
license = 'GNU AGPLv3'
classifiers = [  # Optional
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 3 - Alpha",
        # Indicate who your project is intended for
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",
        # Pick your license as you wish
        "License :: OSI Approved :: AGPL License",
        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        # These classifiers are *not* checked by 'pip install'. See instead
        # 'python_requires' below.
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
]
readme = "README.md"
repository = "https://github.com/rl-institut/digipipe"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rl-institut/digipipe/issues"

[tool.poetry.dependencies]
python = ">=3.7"
# TODO: Add packages here via `poetry add <package_name>
# TODO: Following packages need to be added: pandas
# TODO: geopandas
# TODO: shapely
# TODO: snakemake
# TODO: matplotlib
# TODO: pyyaml
# TODO: descartes
# TODO: fiona
# TODO: rtree
# TODO: openpyxl==3.1.0
# TODO: plotly
# TODO: rasterstats
# TODO: networkx
# TODO: pygraphviz
# TODO: pygments
# TODO: rasterio
# TODO: Jinja2==3.0.3
# TODO: geopy

[tool.poetry.dev-dependencies]
Werkzeug = "^2.0.1" # https://github.com/pallets/werkzeug   # TODO: Find out if needed
ipdb = "^0.13.7"  # https://github.com/gotcha/ipdb   # TODO: Find out if needed
sphinx = "^5.3.0"  # https://github.com/sphinx-doc/sphinx
sphinx-material = "^0.0.35"
m2r2 = "^0.3.3"


# Testing
# ------------------------------------------------------------------------------
# mypy = "^0.812"  # https://github.com/python/mypy
pytest = "^6.2.4"  # https://github.com/pytest-dev/pytest


# Code quality
# ------------------------------------------------------------------------------
flake8 = "^3.9.2"  # https://github.com/PyCQA/flake8
pylint-django = "^2.3.0"  # https://github.com/PyCQA/pylint-django  # downgraded because https://github.com/PyCQA/pylint-django/issues/309
pre-commit = "^2.13.0"  # https://github.com/pre-commit/pre-commit
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
darglint = "^1.8.1"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-pytest-style = "^1.6.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

