[tool.poetry]
name = "digipipe"
version = "1.0.0"
description = "Pipeline for data and energy system in the Digiplan project."
authors = [
  "Jonathan Amme <jonathan.amme@rl-institut.de>",
  "Marie-Claire Gering <marie-claire.gering@rl-institut.de>",
  "David Starzl <David.Starzl@rl-institut.de>",
  "Aaron Schilling <Aaron.Schilling@rl-institut.de>",
  "Hedwig Bartels <Hedwig.Bartels@rl-institut.de>",
]
license = 'GNU AGPLv3'
classifiers = [  # Optional
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 5 - Production/Stable",
        # Indicate who your project is intended for
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",
        # Pick your license as you wish
        "License :: OSI Approved :: AGPL License",
        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        # These classifiers are *not* checked by 'pip install'. See instead
        # 'python_requires' below.
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
]
readme = "README.md"
repository = "https://github.com/rl-institut/digipipe"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rl-institut/digipipe/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.3"
geopandas = "^0.12.2"
shapely = "^2.0.1"
snakemake = "7.32.0"
matplotlib = "^3.7.0"
pyyaml = "^6.0"
descartes = "^1.1.0"
fiona = "<=1.9"
rtree = "^1.0.1"
openpyxl = "3.1.0"
plotly = "^5.13.1"
rasterstats = "^0.18.0"
networkx = "^3.0"
pygraphviz = "^1.10"
pygments = "^2.14.0"
rasterio = "^1.3.6"
jinja2 = "3.0.3"
geopy = "^2.3.0"
oemoflex = { git = "https://git@github.com/rl-institut/oemoflex", tag = "0.0.1"}
ruff = "^0.0.257"
types-pyyaml = "^6.0.12.9"
pyxlsb = "^1.0.10"
tabula-py = "^2.7.0"
requests = "^2.30.0"
types-requests = "^2.30.0.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.12"
mkdocs-include-markdown-plugin = "^4.0.4"
mkdocs-same-dir = "^0.1.2"
mkdocs-exclude = "^1.0.2"
mkdocs-exclude-search = "^0.6.5"
boto3 = "1.26.125"

[tool.poetry.dev-dependencies]
m2r2 = "^0.3.3"


# Testing
# ------------------------------------------------------------------------------
# mypy = "^0.812"  # https://github.com/python/mypy
pytest = "^6.2.4"  # https://github.com/pytest-dev/pytest


# Code quality
# ------------------------------------------------------------------------------
flake8 = "^3.9.2"  # https://github.com/PyCQA/flake8
pylint-django = "^2.3.0"  # https://github.com/PyCQA/pylint-django  # downgraded because https://github.com/PyCQA/pylint-django/issues/309
pre-commit = "^2.13.0"  # https://github.com/pre-commit/pre-commit
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
darglint = "^1.8.1"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-pytest-style = "^1.6.0"
black = "^21.12b0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
line-length = 80
ignore = [
  "F821",  # Undefined name
]
